Added star ratings to the statsbar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
           <div id="statsbar">
             <div id="totalmoves">0</div>
             <div id="timer">0</div>
+            <ul id="statsrating" class="rating">
+              <li class="star">One Star</li>
+              <li class="star">Two Star</li>
+              <li class="star">Three Star</li>
+            </ul>
             <div class="stopgame">Restart Game</div>
           </div><!-- end: .statsbar -->
 
